<resources>
    <string name="app_name">Practivity</string>
    <string name="welcome" translatable="false">Welcome to</string>
    <string name="category_activities_title">Categories</string>
    <string name="activities_title">Activities</string>
    <string name="action_settings">Settings</string>

    <string name="address">Address:</string>
    <string name="site" translatable="false">Site:</string>

    <string name="name_ex" translatable="false">Name</string>
    <string name="address_ex" translatable="false">Av. Antônio Carlos, 6627 Pampulha - Belo Horizonte/MG - CEP: 31270-901, Sala 1000C</string>
    <string name="email_ex" translatable="false">blablabla@gmail.com</string>
    <string name="site_ex" translatable="false">http://www.asdad.com.br</string>
    <string name="phone_ex" translatable="false">(31) 12345-9586</string>
    <string name="distance_ex" translatable="false">4,5km</string>

    <string name="send">Send</string>
    <string name="call">Call</string>

    <string name="information">Information</string>
    <string name="please_connect_to_internet">Please connect to internet</string>

    <string name="gps_not_found_message">Want to enable?</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="last_saved_location">Last saved location being used</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="addCategoryTitle">What category we should add?</string>
    <string name="addActivityTitle">What activity you think is missing?</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>

    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
</resources>
