<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:id="@+id/cv"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entitie_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/name_ex"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryLight"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_ex"
                android:id="@+id/entitie_address"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entitie_email"
                android:text="@string/email_ex"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>